--- a/nt.tex
+++ b/nt.tex
@@ -308,19 +308,19 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 
 %% \end{example}
 
-\begin{definition}[Vertical composition]
-\label{def:vertical_composition}
-\index{Natural transformation!Vertical composition}
-Let $F,G,H$ are functors between categories $\cat{C}$ and $\cat{D}$.
-Also we have $\alpha : F \tont G, \beta: G \tont
-H$ - natural transformations. We can compose the $\alpha$ and $\beta$
-as follows 
-\[
-\alpha \circ \beta: F \tont H.
-\]
-This composition
-is called \textit{vertical composition}.
-\end{definition}
+%% \begin{definition}[Vertical composition]
+%% \label{def:vertical_composition}
+%% \index{Natural transformation!Vertical composition}
+%% Let $F,G,H$ are functors between categories $\cat{C}$ and $\cat{D}$.
+%% Also we have $\alpha : F \tont G, \beta: G \tont
+%% H$ - natural transformations. We can compose the $\alpha$ and $\beta$
+%% as follows 
+%% \[
+%% \alpha \circ \beta: F \tont H.
+%% \]
+%% This composition
+%% is called \textit{vertical composition}.
+%% \end{definition}
 
 \begin{definition}[Horizontal composition]
 \label{def:horizontal_composition}
