--- a/nt.tex
+++ b/nt.tex
@@ -422,33 +422,33 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 %% \end{remark}
 
 
-%% \section{Polymorphism and natural transformation}
+\section{Polymorphism and natural transformation}
 
-%% Polymorphism plays a certain role in programming languages. Category
-%% theory provides several facts about polymorphic functions which are
-%% very important.
+Polymorphism plays a certain role in programming languages. Category
+theory provides several facts about polymorphic functions which are
+very important.
 
-%% \begin{definition}[Parametrically polymorphic function]
-%% \index{Parametric polymorphism}
-%% \label{def:pp_function}
-%% Polymorphism is parametric if all function instances behave uniformly
-%% i.e. have the same realization. The functions which satisfy the
-%% parametric polymorphism requirements are parametrically polymorphic.
-%% \end{definition}
+\begin{definition}[Parametrically polymorphic function]
+\index{Parametric polymorphism}
+\label{def:pp_function}
+Polymorphism is parametric if all function instances behave uniformly
+i.e. have the same realization. The functions which satisfy the
+parametric polymorphism requirements are parametrically polymorphic.
+\end{definition}
 
-%% \begin{definition}[Ad-hoc polymorphism]
-%% \label{def:ad_hoc_polymorphism}
-%% Polymorphism is parametric if the function instances can behave
-%% differently dependently on the type they are being instantiated with. 
-%% \end{definition}
+\begin{definition}[Ad-hoc polymorphism]
+\label{def:ad_hoc_polymorphism}
+Polymorphism is parametric if the function instances can behave
+differently dependently on the type they are being instantiated with. 
+\end{definition}
 
-%% \begin{theorem}[Reynolds]
-%% \label{thm:reynolds}
-%% \mynameref{def:pp_function}s are \mynameref{def:nt}s 
-%% \begin{proof}
-%% TBD
-%% \end{proof}
-%% \end{theorem}
+\begin{theorem}[Reynolds]
+\label{thm:reynolds}
+\mynameref{def:pp_function}s are \mynameref{def:nt}s 
+\begin{proof}
+TBD
+\end{proof}
+\end{theorem}
 
 \subsection{\textbf{Hask} category}
 
