--- a/nt.tex
+++ b/nt.tex
@@ -367,32 +367,32 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 %%   As result we have the introduced mapping $\otimes$ as a bifunctor.
 %% \end{remark}
 
-%% \begin{definition}[Left whiskering]
-%% \label{def:lw}
-%% If we have 3 categories $\cat{B}, \cat{C}, \cat{D}$, 
-%% \mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{B} \to
-%% \cat{C}$ and \mynameref{def:nt} 
-%% $\alpha: F \tont G$ then we can construct a new natural
-%% transformations:
-%% \[
-%% \alpha H : F \circ H \tont G \circ H
-%% \]
-%% that is called \textit{left whiskering} of functor and natural
-%% transformation \cite{nlab:whiskering}. 
-%% \end{definition}
+\begin{definition}[Left whiskering]
+\label{def:lw}
+If we have 3 categories $\cat{B}, \cat{C}, \cat{D}$, 
+\mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{B} \to
+\cat{C}$ and \mynameref{def:nt} 
+$\alpha: F \tont G$ then we can construct a new natural
+transformations:
+\[
+\alpha H : F \circ H \tont G \circ H
+\]
+that is called \textit{left whiskering} of functor and natural
+transformation \cite{nlab:whiskering}. 
+\end{definition}
 
-%% \begin{definition}[Right whiskering]
-%% \label{def:rw}
-%% If we have 3 categories $\cat{C}, \cat{D}, \cat{E}$, 
-%% \mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{D} \to
-%% \cat{E}$ and \mynameref{def:nt} 
-%% $\alpha: F \tont G$ then we can construct a new natural 
-%% transformations: 
-%% \[
-%% H \alpha : H \circ F \tont H \circ G
-%% \]
-%% that is called \textit{right whiskering} of functor and natural
-%% transformation \cite{nlab:whiskering}. 
+\begin{definition}[Right whiskering]
+\label{def:rw}
+If we have 3 categories $\cat{C}, \cat{D}, \cat{E}$, 
+\mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{D} \to
+\cat{E}$ and \mynameref{def:nt} 
+$\alpha: F \tont G$ then we can construct a new natural 
+transformations: 
+\[
+H \alpha : H \circ F \tont H \circ G
+\]
+that is called \textit{right whiskering} of functor and natural
+transformation \cite{nlab:whiskering}. 
 %% \end{definition}
 
 \begin{definition}[Identity natural transformation]
