--- a/nt.tex
+++ b/nt.tex
@@ -381,19 +381,19 @@ objects of 3 categories: $\cat{\mathcal{A}} = \left[\cat{C},
 %% transformation \cite{nlab:whiskering}. 
 %% \end{definition}
 
-%% \begin{definition}[Right whiskering]
-%% \label{def:rw}
-%% If we have 3 categories $\cat{C}, \cat{D}, \cat{E}$, 
-%% \mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{D} \to
-%% \cat{E}$ and \mynameref{def:nt} 
-%% $\alpha: F \tont G$ then we can construct a new natural 
-%% transformations: 
-%% \[
-%% H \alpha : H \circ F \tont H \circ G
-%% \]
-%% that is called \textit{right whiskering} of functor and natural
-%% transformation \cite{nlab:whiskering}. 
-%% \end{definition}
+\begin{definition}[Right whiskering]
+\label{def:rw}
+If we have 3 categories $\cat{C}, \cat{D}, \cat{E}$, 
+\mynameref{def:functor}s $F,G: \cat{C} \tof \cat{D}$, $H: \cat{D} \to
+\cat{E}$ and \mynameref{def:nt} 
+$\alpha: F \tont G$ then we can construct a new natural 
+transformations: 
+\[
+H \alpha : H \circ F \tont H \circ G
+\]
+that is called \textit{right whiskering} of functor and natural
+transformation \cite{nlab:whiskering}. 
+\end{definition}
 
 \begin{definition}[Identity natural transformation]
 \label{def:idnt}
