--- a/nt.tex
+++ b/nt.tex
@@ -391,8 +391,8 @@ transformations:
 \[
 H \alpha : H \circ F \tont H \circ G
 \]
-that is called \textit{right whiskering} of functor and natural
-transformation \cite{nlab:whiskering}. 
+%% that is called \textit{right whiskering} of functor and natural
+%% transformation \cite{nlab:whiskering}. 
 \end{definition}
 
 \begin{definition}[Identity natural transformation]
