--- a/cattheory.bib
+++ b/cattheory.bib
@@ -51,12 +51,12 @@
 
 
 @misc{nlab:whiskering,
-  author = {{nLab authors}},
+  author = {nLab authors},
   title = {whiskering},
-  howpublished = {\url{http://ncatlab.org/nlab/show/whiskering}},
-  note = {\href{http://ncatlab.org/nlab/revision/whiskering/11}{Revision 11}},
-  month = sep,
-  year = 2018
+  howpublished = {http://ncatlab.org/nlab/show/whiskering},
+  note = {Revision 11},
+  month = {sep},
+  year = {2018}
 }
 
 @misc{ wiki:russell_paradox,
