cites for src were added

--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,48 @@
 %% -*- coding:utf-8 -*-
+@misc{github:cattheory_ivanmurashko,
+  author = {Ivan Murashko},
+  title = {Category Theory by Example},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/ivanmurashko/articles/tree/master/cattheory}
+}
+
+@misc{github:cattheory_cpp_examples,
+  author = {{Ivan Murashko}, {Alexey Radkov}, {Marat Minshin}},
+  title = {C++ examples for Category Theory by Example book},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/CatTheoryByExample/cpp-examples}
+}
+
+@misc{github:cattheory_scala_examples,
+  author = {{Ivan Murashko}, {Alexey Radkov}, {Marat Minshin}},
+  title = {Scala examples for Category Theory by Example book},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/CatTheoryByExample/scala-examples}
+}
+
+@misc{github:cattheory_hs_examples,
+  author = {{Ivan Murashko}, {Alexey Radkov}, {Marat Minshin}},
+  title = {Haskell examples for Category Theory by Example book},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/CatTheoryByExample/hs-examples}
+}
+
+
+@book{bib:quantum_optics_mine,
+ title={{Квантовая оптика}},
+  author={{Мурашко И. В.}},
+  url={https://github.com/ivanmurashko/lectures/blob/master/pdfs/qo.pdf},
+  year={2018}
+}
+
 @misc{ wiki:distributive_category,
     author = "{Wikipedia contributors}",
     title = "Distributive category --- {Wikipedia}{,} The Free Encyclopedia",
@@ -80,22 +124,6 @@
   author={Bob Coecke},
   url={https://arxiv.org/abs/0808.1032},
   year={2008}
-}
-
-@book{bib:quantum_optics_mine,
- title={{Квантовая оптика}},
-  author={{Мурашко И. В.}},
-  url={https://github.com/ivanmurashko/lectures/blob/master/pdfs/qo.pdf},
-  year={2018}
-}
-
-@misc{bib:github:ivanmurashko,
-  author = {Murashko, Ivan},
-  title = {Category theory},
-  year = {2018},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  howpublished = {\url{https://github.com/ivanmurashko/articles/tree/master/cattheory/src}}
 }
 
 
