--- a/introduction.tex
+++ b/introduction.tex
@@ -29,8 +29,12 @@ considered as an alternative view to another one.
 
 There are a lot of examples from programming languages which include
 Haskell, Scala, C++. The source files for programming languages 
-examples (Haskell, C++, Scala) can be found on github repository
-\cite{bib:github:ivanmurashko}.  
+examples (Haskell, C++, Scala) can be found on github repositories:
+\begin{itemize}
+\item Haskell: \cite{github:cattheory_hs_examples}
+\item Scala: \cite{github:cattheory_scala_examples}
+\item C++: \cite{github:cattheory_cpp_examples}
+\end{itemize}
 
 The examples from physics are related to quantum mechanics that is the
 most known for me. For the examples We were inspired by the Bob Coecke
@@ -41,4 +45,4 @@ The text is distributed under \textbf{Creative Common Public License}
 i.e. any reader has right to copy, store, modify, distribute or build
 upon the book until the original author is pointed in the derivative
 products. The original text of the book can be found at
-\cite{bib:github:ivanmurashko}.  
+\cite{github:cattheory_ivanmurashko}.  
