--- a/introduction.tex
+++ b/introduction.tex
@@ -43,6 +43,6 @@ article \cite{bib:arxiv:Bob_Coecke_2008}.
 The text is distributed under \textbf{Creative Common Public License}
 (see the text of the license at the end of the book)
 i.e. any reader has right to copy, store, modify, distribute or build
-upon the book until the original author is pointed in the derivative
-products. The original text of the book can be found at
+upon the book until the original authors are pointed in the derivative
+products. The initial text of the book can be found at
 \cite{github:cattheory_ivanmurashko}.  
