--- a/kleisli.tex
+++ b/kleisli.tex
@@ -217,7 +217,18 @@ auto h(float x) {
 
 \section{Non-Determinism}
 
+The situation when a function returns several values is not applicable
+for \mynameref{def:setcategory} but can appear for
+\mynameref{def:relcategory}. From other hand the non standard
+situation is required for practical applications and as result has to
+be modeled in programming languages. The \textbf{List} monad is used
+for it.
+
+\subsection{Haskell example}
+
+\begin{example}[List monad][\textbf{Hask}]
 TBD
+\end{example}
 
 \section{Side effects and interactive input/output}
 
