--- a/nt.tex
+++ b/nt.tex
@@ -431,14 +431,14 @@ very important.
 \begin{definition}[Parametrically polymorphic function]
 \index{Parametric polymorphism}
 \label{def:pp_function}
-Polymorphism is parametric if all function instances behave uniformly
+Polymorphism is \textit{parametric} if all function instances behave uniformly
 i.e. have the same realization. The functions which satisfy the
 parametric polymorphism requirements are parametrically polymorphic.
 \end{definition}
 
 \begin{definition}[Ad-hoc polymorphism]
 \label{def:ad_hoc_polymorphism}
-Polymorphism is parametric if the function instances can behave
+Polymorphism is \textit{ad-hoc} if the function instances can behave
 differently dependently on the type they are being instantiated with. 
 \end{definition}
 
